--- a/yii-application/backend/web/css/site.css
+++ b/yii-application/backend/web/css/site.css
@@ -2,7 +2,14 @@ html,
 body {
     height: 100%;
 }
-
+h1,h2,h3,h4,h5,h6{font-family: "microsoft yahei", "黑体"}
+.main{padding: 30px 10px;}
+.main h1,.main h2{font-family: "microsoft yahei", "黑体";margin-bottom: 1.5em;font-size: medium;font-weight: bold}
+.main .nickname{text-indent: 0.5em;margin-top: 1em;}
+.main .tool{margin: 2em 1em}
+.main p.content{text-indent: 3em;}
+.main p.content .pull{margin-right: 3em;}
+#msgnum{background:#B90505 }
 .wrap {
     min-height: 100%;
     height: auto;
@@ -72,13 +79,8 @@ a.desc:after {
     content: "\e156";
 }
 
-.grid-view td {
+.grid-view th {
     white-space: nowrap;
-}
-
-.grid-view .filters input,
-.grid-view .filters select {
-    min-width: 50px;
 }
 
 .hint-block {
@@ -95,26 +97,5 @@ a.desc:after {
     margin: 0 0 15px 0;
 }
 
-/* align the logout "link" (button in form) of the navbar */
-.nav li > form > button.logout {
-    padding: 15px;
-    border: none;
-}
+.tx{width: 80px;height: 80px;cursor: pointer}
 
-@media(max-width:767px) {
-    .nav li > form > button.logout {
-        display:block;
-        text-align: left;
-        width: 100%;
-        padding: 10px 15px;
-    }
-}
-
-.nav > li > form > button.logout:focus,
-.nav > li > form > button.logout:hover {
-    text-decoration: none;
-}
-
-.nav > li > form > button.logout:focus {
-    outline: none;
-}
