--- a/yii-application/backend/web/css/site.css
+++ b/yii-application/backend/web/css/site.css
@@ -18,7 +18,7 @@ h1,h2,h3,h4,h5,h6{font-family: "microsoft yahei", "黑体"}
 }
 
 .wrap > .container {
-    padding: 20px 15px 20px;
+    padding: 20px 0 20px;
 }
 
 .footer {
